--- a/src/global.css
+++ b/src/global.css
@@ -101,13 +101,6 @@
   font-size: 13px;
   line-height: 1.5;
 }
-
-.ant-btn-sm {
-  height: 28px;
-  padding: 0px 8px;
-  font-size: 12px;
-  border-radius: 2px;
-}
 .tag-btn{
   cursor: pointer;
   margin-bottom: 1px;margin-top: 1px;
@@ -123,7 +116,40 @@
 .ant-btn{
   height: 29px;
   line-height: 20px;
+  padding: 3px 10px;
+}
+.ant-btn-sm {
+  height: 25px;
+  padding: 1px 6px;
+  font-size: 12px;
+  border-radius: 2px;
+}
+.ant-btn > .anticon + span, .ant-btn > span + .anticon {
+  margin-left: 6px;
+}
+.ant-btn-sm > .anticon + span, .ant-btn-sm > span + .anticon {
+  margin-left: 3px;
 }
 .ant-input-number-input{
   height: 28px;
+}
+.ant-table.ant-table-small > .ant-table-title, .ant-table.ant-table-small > .ant-table-content > .ant-table-footer {
+  padding: 4px 8px;
+}
+.ant-card-small > .ant-card-head {
+  min-height: 43px;
+  line-height: 21px;
+}
+.ant-card-small > .ant-card-head > .ant-card-head-wrapper > .ant-card-head-title {
+  padding: 11px 0 10px 0;
+  font-size: 15px;
+}
+.ant-card-small > .ant-card-head {
+  padding: 0 18px;
+}
+.ant-table-thead > tr > th .ant-table-column-sorter .ant-table-column-sorter-inner-full {
+  margin-top: -8px;
+}
+.ant-table.ant-table-small {
+  font-size: 13px;
 }
